Bumper spring en minor versjon opp. Setter bytebuddy experimental jvm flagg til å være true.